kubernetes/app/external/homeassistant/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: homeassistant
spec:
  headers:
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    frameDeny: true
    customFrameOptionsValue: SAMEORIGIN
    hostsProxyHeaders:
      - "X-Forwarded-Host"
