kubernetes/app/external/homeassistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
