kubernetes/app/external/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: homeassistant-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - ${HOMEASSISTANT_HOST}
      secretName: homeassistant-tls
  rules:
    - host: ${HOMEASSISTANT_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
